// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentJsonRender should return correct result 1`] = `
Object {
  "children": Array [
    "testing",
    Object {
      "children": Array [
        "Test Hello World!",
      ],
      "props": Object {},
      "type": "h1",
    },
  ],
  "props": Object {
    "width": "100px",
  },
  "type": "div",
}
`;

exports[`ComponentJsonRender should return works with styled components 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        "testing",
      ],
      "props": Object {},
      "type": "h1",
    },
    Object {
      "children": Array [
        "Hello World!",
      ],
      "props": Object {},
      "type": "h1",
    },
  ],
  "props": Object {},
  "styles": Array [
    Object {
      "key": "width",
      "value": "100%",
    },
    Object {
      "key": "background-color",
      "value": "#fff222",
    },
  ],
  "type": "div",
}
`;
